<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.myshoestore.MainViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/welcome_background"
            tools:context=".WelcomeFragment" >

            <ImageView
                android:layout_width="300dp"
                android:layout_height="196dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/shoes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_check_next_pages_for_more_information"
                android:textSize="30sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/next_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{ ()->viewModel.showInstractionSreen() }"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_background"
                android:backgroundTint="#4682B4"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:iconTint="@color/steel"
                app:rippleColor="@color/steel" />
        </LinearLayout>
    </ScrollView>
</layout>